<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.contacts.ContactsFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textFilterLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/filter_label"
        android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Filtrar por:"
        />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/filterGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:layout_marginTop="4dp"
        app:selectionRequired="true"
        app:singleSelection="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textFilterLabel">

        <com.google.android.material.chip.Chip
            android:id="@+id/chipAll"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/filter_all"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chipVisited"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_visited"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chipNotVisited"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_not_visited"/>

    </com.google.android.material.chip.ChipGroup>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textSortLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/sort_label"
        android:textAppearance="?attr/textAppearanceLabelLarge"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filterGroup"
        tools:text="Ordenar por"
        />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/sortGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:layout_marginTop="4dp"
        app:selectionRequired="true"
        app:singleSelection="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textSortLabel">

        <com.google.android.material.chip.Chip
            android:id="@+id/chipSortCode"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/sort_code"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chipSortName"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_name"/>
    </com.google.android.material.chip.ChipGroup>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/sortGroup"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerContacts"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingTop="8dp"
        android:paddingBottom="88dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:listitem="@layout/item_contact" />

</androidx.constraintlayout.widget.ConstraintLayout>